<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2016 Nikhil Bawane
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">DNBS</string>
    <string name="app_title">Digital Notice Board Service</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort Tags</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="home">Home</string>
    <string name="all">All</string>
    <string name="circulars">Circulars</string>
    <string name="notices">Notices</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/home</item>
        <item>@string/all</item>
        <item>@string/circulars</item>
        <item>@string/notices</item>
        <item>@string/settings</item>
        <item>@string/about</item>
    </string-array>

    <string name="dept_mch">Mechanical (MCH)</string>
    <string name="dept_cvl">Civil (CVL)</string>
    <string name="dept_etc">Electronics and Telecommunication (ETC)</string>
    <string name="dept_aer">Aeronautical (AER)</string>
    <string name="dept_ee">Electronics (EE)</string>
    <string name="dept_it">Information Technology (IT)</string>
    <string name="dept_elc">Electrical (ELC)</string>
    <string name="dept_ct">Computer Technology (CT)</string>

    <string-array name="departments">
        <item>@string/dept_mch</item>
        <item>@string/dept_cvl</item>
        <item>@string/dept_etc</item>
        <item>@string/dept_aer</item>
        <item>@string/dept_ee</item>
        <item>@string/dept_it</item>
        <item>@string/dept_elc</item>
        <item>@string/dept_ct</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_about">About</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_add_notice">Add Notice</string>

</resources>
