<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_nav">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home">
            <menu>
                <item
                    android:id="@+id/nav_all"
                    android:title="@string/all"
                    android:checkable="true"
                    android:icon="@mipmap/all"/>
                <item
                    android:id="@+id/nav_circ"
                    android:title="@string/circulars"
                    android:checkable="true"
                    android:icon="@mipmap/circular"/>
                <item
                    android:id="@+id/nav_note"
                    android:title="@string/notices"
                    android:checkable="true"
                    android:icon="@mipmap/notice"/>
            </menu>
        </item>
    </group>

    <group
        android:id="@+id/menu_misc">
        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:title="@string/about" />
    </group>
</menu>